applied changes